k8s/kafka.yaml
---
# -----------------------------
# KAFKA (KRaft mode, no ZooKeeper)
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka        # gives the pod a stable hostname so quorum voters resolves
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.1
          ports:
            - containerPort: 9092
            - containerPort: 9093
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: kafka   # Matches KAFKA_BOOTSTRAP_SERVERS: kafka:9092
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      protocol: TCP
      port: 9092
      targetPort: 9092

---
# -----------------------------
# KAFKA UI
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  type: NodePort
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
