k8s/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: meet-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres # Matches SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/meet_db
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-postgres-storage
          persistentVolumeClaim:
            claimName: auth-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres # Matches SPRING_DATASOURCE_URL: jdbc:postgresql://auth-postgres:5432/auth_db
spec:
  selector:
    app: auth-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
